--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,27 +1,42 @@
 <mat-card class="login-page">
   <mat-card-title>Login</mat-card-title>
   <mat-card-content>
-
-    <form class="login-form data-form">
-
+    <form class="login-form data-form" #loginForm="ngForm">
       <mat-form-field>
-
-        <input matInput type="email" name="email"
-               placeholder="Email">
-
+        <input
+          matInput
+          type="email"
+          name="email"
+          placeholder="Email"
+          ngModel
+          #email="ngModel"
+          name="email"
+          required
+        />
       </mat-form-field>
 
       <mat-form-field>
-
-        <input matInput type="password" placeholder="Password">
-
+        <input
+          matInput
+          type="password"
+          placeholder="Password"
+          ngModel
+          #password="ngModel"
+          name="password"
+          required
+        />
       </mat-form-field>
 
-      <button mat-raised-button color="primary">
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="showMe(loginForm.value)"
+      >
         Login
       </button>
-
     </form>
-
+    <div class="form-val">
+      {{ email.valid }}
+    </div>
   </mat-card-content>
 </mat-card>
