--- a/src/app/create-course/create-course-step-1/create-course-step-1.component.html
+++ b/src/app/create-course/create-course-step-1/create-course-step-1.component.html
@@ -6,4 +6,44 @@
       This title is already being used.
     </mat-error>
   </mat-form-field>
+
+  <mat-form-field>
+    <mat-select placeholder="Select category" formControlName="category">
+      <ng-container *ngFor="let category of courseCategories$ | async">
+        <mat-option [value]="category.code">{{
+          category.description
+        }}</mat-option>
+      </ng-container>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field>
+    <input
+      matInput
+      [matDatepicker]="releaseDatePicker"
+      placeholder="Release date"
+      formControlName="releaseAt"
+    />
+    <mat-datepicker-toggle
+      matSuffix
+      [for]="releaseDatePicker"
+    ></mat-datepicker-toggle>
+    <mat-datepicker #releaseDatePicker></mat-datepicker>
+  </mat-form-field>
+
+  <mat-checkbox color="primary" formControlName="downloadAllowed"
+    >Download Allowed ?</mat-checkbox
+  >
+  <mat-form-field>
+    <textarea
+      matInput
+      placeholder="Description"
+      cdkTextareaAutosize
+      cdkAutosizeMinRows="1"
+      cdkAutosizeMaxRows="10"
+      formControlName="longDescription"
+    ></textarea>
+  </mat-form-field>
+  <div class="form-val">{{ form.value | json }}</div>
+  <div class="form-val">{{ form.valid | json }}</div>
 </div>
