--- a/src/app/create-course/create-course.component.html
+++ b/src/app/create-course/create-course.component.html
@@ -1,15 +1,38 @@
 <div class="create-course-panel data-form">
   <h2 class="title">Create New Course</h2>
 
-  <mat-horizontal-stepper class="mat-elevation-z5" labelPosition="bottom">
-   <mat-step>
-    <ng-template matStepLabel>course landing page details</ng-template>
-    <create-course-step-1></create-course-step-1>
-    <div class="stepper-bottoms">
-      <button mat-raised-button color="primary" matStepperNext>
-        Continue to step 2
-      </button>
-    </div>
-   </mat-step>
+  <mat-horizontal-stepper
+    [linear]="false"
+    class="mat-elevation-z5"
+    labelPosition="bottom"
+  >
+    <mat-step
+      [stepControl]="step1.form"
+      errorMessage="Landing page is in error"
+    >
+      <ng-template matStepLabel>course landing page details</ng-template>
+      <create-course-step-1 #step1></create-course-step-1>
+      <div class="stepper-bottoms">
+        <button mat-raised-button color="primary" matStepperNext>
+          Continue to step 2
+        </button>
+      </div>
+    </mat-step>
+
+    <mat-step
+      [stepControl]="step2.form"
+      errorMessage="Pricing page is in error"
+    >
+      <ng-template matStepLabel>course pricing details</ng-template>
+      <create-course-step-2 #step2></create-course-step-2>
+      <div class="stepper-bottoms">
+        <button mat-raised-button matStepperPrevious>Back</button>
+
+        <button mat-raised-button color="primary" matStepperNext>
+          Continue to step 3
+        </button>
+      </div>
+    </mat-step>
   </mat-horizontal-stepper>
+  <div class="form-val">Step 1 {{ step1.form.valid | json }}</div>
 </div>
