--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -1,2 +1,27 @@
+<input
+  type="file"
+  class="file-input"
+  #fileUpload
+  (change)="onFileSelected($event)"
+/>
+<div class="file-upload">
+  <mat-form-field>
+    <input matInput [disabled]="true" [value]="fileName" />
+  </mat-form-field>
+  <button
+    mat-mini-fab
+    color="primary"
+    class="upload-btn"
+    (click)="fileUpload.click()"
+  >
+    <mat-icon>attach_file</mat-icon>
+  </button>
+</div>
 
-
+<mat-progress-bar
+  *ngIf="uploadProgress"
+  class="progress-bar"
+  mode="determinate"
+  [value]="uploadProgress"
+>
+</mat-progress-bar>
