implement form array to add lessons in courses

--- a/src/app/create-course/create-course-step-2/create-course-step-2.component.html
+++ b/src/app/create-course/create-course-step-2/create-course-step-2.component.html
@@ -4,7 +4,10 @@
     <mat-radio-button value="premium">Premium</mat-radio-button>
   </mat-radio-group>
 
-  <file-upload requireFileType="image/png"></file-upload>
+  <file-upload
+    requireFileType="image/png"
+    formControlName="thumbnail"
+  ></file-upload>
 
   <mat-form-field>
     <input type="number" matInput placeholder="Price" formControlName="price" />
