--- a/src/app/create-course/create-course.component.html
+++ b/src/app/create-course/create-course.component.html
@@ -2,7 +2,7 @@
   <h2 class="title">Create New Course</h2>
 
   <mat-horizontal-stepper
-    [linear]="false"
+    [linear]="true"
     class="mat-elevation-z5"
     labelPosition="bottom"
   >
@@ -30,6 +30,24 @@
 
         <button mat-raised-button color="primary" matStepperNext>
           Continue to step 3
+        </button>
+      </div>
+    </mat-step>
+    <mat-step
+      [stepControl]="step3.form"
+      errorMessage="Course lessons is in error"
+    >
+      <ng-template matStepLabel>course lessons</ng-template>
+      <create-course-step-3 #step3></create-course-step-3>
+      <div class="stepper-bottoms">
+        <button mat-raised-button matStepperPrevious>Back</button>
+        <button
+          mat-raised-button
+          color="primary"
+          [disabled]="!step3.form.valid || step3.lessons.length == 0"
+          (click)="submit(step1.form.value, step2.form.value, step3.form.value)"
+        >
+          Create course
         </button>
       </div>
     </mat-step>
