--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -12,7 +12,8 @@
     mat-mini-fab
     color="primary"
     class="upload-btn"
-    (click)="fileUpload.click()"
+    (click)="onClick(fileUpload)"
+    [disabled]="disabled"
   >
     <mat-icon>attach_file</mat-icon>
   </button>
